Fix list spacings

--- a/src/styles/pages/category.scss
+++ b/src/styles/pages/category.scss
@@ -1,7 +1,7 @@
 .cat-list {
   margin-bottom: 40px;
-  margin-left: -10px;
-  margin-right: -10px;
+  margin-left: -5px;
+  margin-right: -5px;
 
   &__button {
     padding: 5px 10px;
